# dem-distribution-edited-model

./: README.md  pyproject.toml
configs/: example.json
src/dem/: combinator.py  enums.py  eq_parser.py  model_arithmetic.py
